upgrade and format

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,7 +2,7 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.22.10
+  version: 1.22.11
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
@@ -19,13 +19,14 @@ lint:
   disabled:
     - cspell
   enabled:
-    - checkov@3.2.382
+    - actionlint@1.7.7
+    - checkov@3.2.392
     - git-diff-check
     - markdownlint@0.44.0
     - prettier@3.5.3
     - taplo@0.9.3
-    - trufflehog@3.88.15
-    - yamllint@1.35.1
+    - trufflehog@3.88.18
+    - yamllint@1.37.0
 actions:
   enabled:
     - trunk-announce
