⬆️ upgrade Bun and TypeScript dependencies
Upgraded Bun from 1.2.8 to 1.2.9/1.2.10 across configuration files and updated TypeScript from 5.8.2 to 5.8.3. Also standardized string quotes in mise.toml to use single quotes consistently. These updates ensure the project uses the latest stable versions of its core dependencies to benefit from bug fixes and performance improvements.

--- a/mise.toml
+++ b/mise.toml
@@ -1,9 +1,9 @@
 [env]
-THEME_PARSER_MISE_ACTIVE = "true"
+THEME_PARSER_MISE_ACTIVE = 'true'
 
 [settings]
 env_file = '.env'
 
 [tools]
-bun = '1.2.8'
+bun = '1.2.9'
 node = '23.11.0'
