--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,38 +1,58 @@
-# This file controls the behavior of Trunk: https://docs.trunk.io/cli
-# To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.22.11
-# Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
+  version: 1.22.12
 plugins:
   sources:
     - id: trunk
-      ref: v1.6.7
+      ref: v1.6.8
       uri: https://github.com/trunk-io/plugins
-# Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
+    - go@1.21.0
     - node@18.20.5
     - python@3.10.8
-# This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
-lint:
-  disabled:
-    - cspell
-  enabled:
-    - actionlint@1.7.7
-    - checkov@3.2.392
-    - git-diff-check
-    - markdownlint@0.44.0
-    - prettier@3.5.3
-    - taplo@0.9.3
-    - trufflehog@3.88.18
-    - yamllint@1.37.0
 actions:
   enabled:
     - trunk-announce
     - trunk-check-pre-push
     - trunk-fmt-pre-commit
     - trunk-upgrade-available
+lint:
+  disabled:
+    - renovate
+    - cspell
+    - eslint
+    - prettier
+  enabled:
+    - actionlint@1.7.7
+    - biome@1.9.4
+    - checkov@3.2.407
+    - circleci@0.1.31543
+    - djlint@1.36.4
+    - dotenv-linter@3.3.0
+    - dustilock@1.2.0
+    - git-diff-check
+    - gitleaks@8.24.3
+    - hadolint@2.12.1-beta
+    - kube-linter@0.7.2
+    - markdown-link-check@3.13.7
+    - markdownlint-cli2@0.17.2
+    - markdownlint@0.44.0
+    - nancy@1.0.48
+    - osv-scanner@2.0.1
+    - oxipng@9.1.4
+    - pre-commit-hooks@5.0.0
+    - semgrep@1.116.0
+    - shellcheck@0.10.0
+    - shfmt@3.6.0
+    - sort-package-json@3.0.0
+    - stylelint@16.18.0
+    - svgo@3.3.2
+    - taplo@0.9.3
+    - trivy@0.61.1
+    - trufflehog-git@3.88.25
+    - trufflehog@3.88.25
+    - yamllint@1.37.0
 merge:
   required_statuses:
     - CodeQL
