--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-	"name": "vscode-theme-parser",
-	"version": "1.0.0",
-	"private": true,
-	"description": "A tool to parse VSCode theme files and generate HTML summaries",
-	"license": "MIT",
-	"author": "Dave Williams <dave@dave.io> (https://dave.io)",
-	"type": "module",
-	"module": "index.ts",
-	"bin": {
-		"vscode-theme-parser": "./index.ts"
-	},
-	"scripts": {
-		"about": "bun run index.ts about",
-		"build": "bun build ./index.ts --outdir ./dist --target node",
-		"format": "bun prettier --write .",
-		"parse": "bun run index.ts parse",
-		"start": "bun run index.ts"
-	},
-	"dependencies": {
-		"chalk": "^5.4.1",
-		"commander": "^13.1.0",
-		"extract-zip": "^2.0.1",
-		"fs-extra": "^11.3.0",
-		"handlebars": "^4.7.8",
-		"nanospinner": "^1.2.2",
-		"ora": "^8.2.0",
-		"xml2js": "^0.6.2",
-		"yauzl": "^3.2.0"
-	},
-	"devDependencies": {
-		"@types/bun": "^1.2.10",
-		"@types/extract-zip": "^2.0.3",
-		"@types/fs-extra": "^11.0.4",
-		"@types/xml2js": "^0.4.14",
-		"@types/yauzl": "^2.10.3"
-	},
-	"peerDependencies": {
-		"typescript": "^5.8.3"
-	},
-	"packageManager": "bun@1.2.13",
-	"engines": {
-		"bun": "~1.2.10"
-	}
+  "name": "vscode-theme-parser",
+  "version": "1.0.0",
+  "private": true,
+  "description": "A tool to parse VSCode theme files and generate HTML summaries",
+  "license": "MIT",
+  "author": "Dave Williams <dave@dave.io> (https://dave.io)",
+  "type": "module",
+  "module": "index.ts",
+  "bin": {
+    "vscode-theme-parser": "./index.ts"
+  },
+  "scripts": {
+    "about": "bun run index.ts about",
+    "build": "bun build ./index.ts --outdir ./dist --target node",
+    "format": "bun prettier --write .",
+    "parse": "bun run index.ts parse",
+    "start": "bun run index.ts"
+  },
+  "dependencies": {
+    "chalk": "^5.4.1",
+    "commander": "^13.1.0",
+    "extract-zip": "^2.0.1",
+    "fs-extra": "^11.3.0",
+    "handlebars": "^4.7.8",
+    "nanospinner": "^1.2.2",
+    "ora": "^8.2.0",
+    "xml2js": "^0.6.2",
+    "yauzl": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.2.10",
+    "@types/extract-zip": "^2.0.3",
+    "@types/fs-extra": "^11.0.4",
+    "@types/xml2js": "^0.4.14",
+    "@types/yauzl": "^2.10.3"
+  },
+  "peerDependencies": {
+    "typescript": "^5.8.3"
+  },
+  "packageManager": "bun@1.2.13",
+  "engines": {
+    "bun": "~1.2.13",
+    "node": "~lts"
+  }
 }
